Parameterizes most ArrayList declarations.
+ Also fixes some depraction issues